# spas

SpaSampleBlazorWasm/: SpaSampleBlazorWasm.sln
SpaSampleBlazorWasm/SpaSampleBlazorWasm/: Program.cs  _Imports.razor
SpaSampleBlazorWasm/SpaSampleBlazorWasm/Properties/: launchSettings.json
SpaSampleBlazorWasm/SpaSampleBlazorWasm/Shared/: NavMenu.razor
SpaSampleBlazorWasm/SpaSampleBlazorWasm/wwwroot/: index.html  manifest.json
spa-sample-angular-ts/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
spa-sample-angular-ts/e2e/src/: app.e2e-spec.ts
spa-sample-angular-ts/src/: index.html  main.ts  manifest.webmanifest
spa-sample-angular-ts/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
spa-sample-react-js/: package-lock.json  package.json
spa-sample-react-js/public/: index.html
spa-sample-react-js/src/: App.css  App.js  App.jsx  index.jsx
spa-sample-react-ts/: package-lock.json  package.json
spa-sample-vue-js/: .eslintrc.js  README.md  package-lock.json  package.json
spa-sample-vue-js/src/: App.vue
spa-sample-vue-js/src/components/: HelloWorld.vue
spa-sample-vue-ts/: README.md  package-lock.json  package.json
spa_sample_flutter/: README.md  pubspec.yaml
spa_sample_flutter/lib/: Languages.dart  SortBy.dart  Timeline.dart  main.dart
spa_sample_flutter/test/: widget_test.dart
spa_sample_flutter/web/: index.html  manifest.json
spa_sample_rust_seed/: Cargo.toml  Makefile.toml
spa_sample_rust_yew/: Cargo.toml
spa_sample_rust_yew/src/: lib.rs
(+39 files in other folders)
